--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "axios": "^0.23.0",
+        "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-bootstrap": "^1.6.4",
         "react-dom": "^17.0.2",
@@ -24,7 +25,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "serve": "PORT=8000 serve -s build"
     },
     "eslintConfig": {
         "extends": [
@@ -44,5 +46,16 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://127.0.0.1:5000"
+    "proxy": "http://127.0.0.1:5000",
+    "devDependencies": {
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+        "babel-plugin-react-remove-properties": "^0.3.0",
+        "check-prop-types": "^1.1.2",
+        "enzyme": "^3.11.0"
+    },
+    "jest": {
+        "watchPathIgnorePatterns": [
+            "<rootDir>/src/containers/"
+        ]
+    }
 }
